--- a/formicaio/umbrel-app.yml
+++ b/formicaio/umbrel-app.yml
@@ -2,9 +2,9 @@ manifestVersion: 1
 id: formicaio
 name: Formicaio
 tagline: Il potere delle formiche
-icon: https://svgshare.com/i/1B0F.svg
+icon: ""
 category: social
-version: "0.1.1"
+version: "0.3.0"
 port: 52100
 description: >-
   Le formiche sono insetti sociali che vivono in colonie e sono
@@ -13,13 +13,9 @@ description: >-
   Ants are social insects that live in colonies and are
   known for their organization and cooperation.
 
-  Simplify your decentralized experience with this intuitive application,
-  designed to streamline your daily tasks when running nodes from home
-  on peer-to-peer (P2P) networks. Seamlessly participate in online
-  communities using the integrated Nostr client, and manage your
-  digital assets with ease through the built-in wallet. Receive, send,
-  and store tokens, rewards, and coins earned from running nodes or received
-  from third-party sources, all within a single, user-friendly interface.
+  Simplify your decentralized experience with this intuitive application
+  to run nodes on peer-to-peer (P2P) networks, like [Autonomi](https://autonomi.com)
+  network currently supported.
 
 developer: bochaco
 website: https://github.com/bochaco/formicaio
@@ -28,9 +24,6 @@ submission: https://github.com/getumbrel/umbrel-apps/pull/1565
 dependencies: []
 repo: https://github.com/bochaco/formicaio
 support: https://github.com/bochaco/formicaio/issues
-gallery:
-  - 1.png
-  - 2.png
-  - 3.png
+gallery: []
 releaseNotes: ""
 path: ""
