--- a/formicaio/umbrel-app.yml
+++ b/formicaio/umbrel-app.yml
@@ -1,21 +1,58 @@
 manifestVersion: 1
 id: formicaio
 name: Formicaio
-tagline: Il potere delle formiche
+tagline: Run nodes on [Autonomi](https://autonomi.com) peer-to-peer (P2P) network
 icon: ""
-category: social
-version: "0.3.0"
+category: networking
+version: "0.4.9"
 port: 52100
 description: >-
-  Le formiche sono insetti sociali che vivono in colonie e sono
-  note per la loro organizzazione e cooperazione.
+  ## Simplify your decentralized experience with Formicaio
 
-  Ants are social insects that live in colonies and are
-  known for their organization and cooperation.
+  Formicaio is an intuitive application designed to help you run nodes on
+  the [Autonomi](https://autonomi.com) network. This P2P network allows users
+  to share storage and bandwidth in exchange for ANT tokens, an ERC-20 token
+  on the Arbitrum One network.
 
-  Simplify your decentralized experience with this intuitive application
-  to run nodes on peer-to-peer (P2P) networks, like [Autonomi](https://autonomi.com)
-  network currently supported.
+  The name "Formicaio" is derived from the Italian word for "anthill"
+  symbolizing the collaborative and structured nature of both ants and the
+  decentralized network it supports. Just as ants work together to build and
+  maintain their colonies, Formicaio empowers users to collaborate and contribute
+  to the Autonomi network.
+
+  ## Node management made easy
+
+  With Formicaio, you can effortlessly run and manage nodes through either a
+  graphical user interface (GUI) or a terminal. The Formicaio backend actively
+  monitors your nodes, providing real-time status updates and statistics, including:
+  - Rewards balance for each node
+  - Memory and CPU usage
+  - Number of records stored locally
+  - Current peer connections
+  - Peers in the routing table
+  - Peers that have shunned the node(s)
+  - Estimated total nodes in the network
+
+  ## Customizable monitoring and management
+
+  A settings panel allows you to customize monitoring tasks and node management, including:
+  - Auto-upgrading nodes when a new binary version is available
+  - Delay settings for node upgrades
+  - Frequency of version checks for the node binary
+  - Frequency of token balance queries
+  - Frequency of metrics and node information retrieval
+  - Configuration of the ERC20 token contract address and RPC URL for reward balance queries
+  - Displaying node statistics on an external LCD device (via I2C interface)
+
+  ## Connection types for nodes
+
+  When setting up nodes, you can define their connection type:
+  - Home-Network mode: Ideal for nodes behind a NAT without port forwarding. This mode activates hole-punching to facilitate direct connections from other nodes. If this not enabled and you're behind a NAT, nodes will struggle to connect to other peers.
+  - UPnP support: Attempt to use UPnP to open a port on your home router for incoming connections. If your router does not support or is not configured for UPnP, create new nodes with UPnP disabled to ensure connectivity.
+
+  ## Deployment modes
+
+  For alternative deployment modes, please refer to the instructions in the [Formicaio repository](https://github.com/bochaco/formicaio/blob/main/README.md).
 
 developer: bochaco
 website: https://github.com/bochaco/formicaio
