Adding more information to the app description

--- a/formicaio/umbrel-app.yml
+++ b/formicaio/umbrel-app.yml
@@ -22,9 +22,20 @@ description: >-
 
   ## Node management made easy
 
-  With Formicaio, you can effortlessly run and manage nodes through either a
-  graphical user interface (GUI) or a terminal. The Formicaio backend actively
-  monitors your nodes, providing real-time status updates and statistics, including:
+  With Formicaio, you can easily run and manage nodes using either a graphical
+  user interface (GUI) or a terminal. This flexibility allows you to perform
+  various actions on individual nodes or groups of selected nodes, including:
+  - Creating new nodes
+  - Starting or stopping nodes
+  - Recycling nodes to generate a new peer ID
+  - Removing nodes
+  - Upgrading nodes when a new binary version is available
+  - Viewing individual node logs in real time
+  - Monitoring memory and CPU usage with detailed charts
+  - Sorting nodes by different criteria, such as creation date, status, or number of connected peers
+
+  The Formicaio backend actively monitors your nodes, providing real-time
+  status updates and statistics, including:
   - Rewards balance for each node
   - Memory and CPU usage
   - Number of records stored locally
