Update description and tagline of formicaio

--- a/formicaio/umbrel-app.yml
+++ b/formicaio/umbrel-app.yml
@@ -1,8 +1,7 @@
 manifestVersion: 1
 id: formicaio
 name: Formicaio
-tagline: Run nodes on [Autonomi](https://autonomi.com) peer-to-peer (P2P) network
-icon: ""
+tagline: Run nodes on the Autonomi peer-to-peer (P2P) network
 category: networking
 version: "0.4.9"
 port: 52100
@@ -60,11 +59,6 @@ description: >-
   When setting up nodes, you can define their connection type:
   - Home-Network mode: Ideal for nodes behind a NAT without port forwarding. This mode activates hole-punching to facilitate direct connections from other nodes. If this not enabled and you're behind a NAT, nodes will struggle to connect to other peers.
   - UPnP support: Attempt to use UPnP to open a port on your home router for incoming connections. If your router does not support or is not configured for UPnP, create new nodes with UPnP disabled to ensure connectivity.
-
-  ## Deployment modes
-
-  For alternative deployment modes, please refer to the instructions in the [Formicaio repository](https://github.com/bochaco/formicaio/blob/main/README.md).
-
 developer: bochaco
 website: https://github.com/bochaco/formicaio
 submitter: bochaco
